cop-sample-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cop-sample-app
    app.kubernetes.io/component: cop-sample-app
    app.kubernetes.io/instance: cop-sample-app
  name: cop-sample-app
spec:
  ports:
  - port: 8080
  selector:
    deployment: cop-sample-app
